[gd_scene load_steps=6 format=3 uid="uid://ceb7xaelbuink"]

[ext_resource type="PackedScene" uid="uid://bwdww056mw4p3" path="res://Scenes/UI/TileDataUi/TileViewer/tile_view_port.tscn" id="1_dqwld"]
[ext_resource type="Script" path="res://Scenes/UI/TileDataUi/tile_data_ui.gd" id="1_dr7n4"]
[ext_resource type="PackedScene" uid="uid://cj8tqg3dud440" path="res://Scenes/UI/TileDataUi/CategoryList/CategoryList.tscn" id="3_j3ogv"]
[ext_resource type="AudioStream" uid="uid://uxl114vhpa3n" path="res://resources/SFX/364690__alegemaate__human-impact-on-ground.wav" id="4_6c5rr"]
[ext_resource type="AudioStream" uid="uid://va6gs4a5j8ca" path="res://resources/SFX/371353__mrthenoronha__iron-hits.wav" id="5_2s65y"]

[node name="TileDataUI" type="MarginContainer"]
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -196.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("1_dr7n4")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4
text = "S
h
o
w
 
D
a
t
a
"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(170, 0)
layout_mode = 2

[node name="TileVisuliser" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer/TileVisuliser"]
layout_mode = 2
color = Color(0, 0, 0, 0.501961)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/TileVisuliser"]
layout_mode = 2

[node name="TileNameLabel" type="Label" parent="HBoxContainer/VBoxContainer/TileVisuliser/VBoxContainer"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Tile Name"
horizontal_alignment = 1
text_overrun_behavior = 3

[node name="BuildingNameLabel" type="Label" parent="HBoxContainer/VBoxContainer/TileVisuliser/VBoxContainer"]
layout_mode = 2
text = "Building Name"
horizontal_alignment = 1

[node name="BuildingLevelLabel" type="Label" parent="HBoxContainer/VBoxContainer/TileVisuliser/VBoxContainer"]
layout_mode = 2
text = "Level ?/?"
horizontal_alignment = 1

[node name="SubViewportContainer" parent="HBoxContainer/VBoxContainer/TileVisuliser/VBoxContainer" instance=ExtResource("1_dqwld")]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
mouse_filter = 2

[node name="ColorRect" type="ColorRect" parent="HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(0.121569, 0.121569, 0.121569, 0.345098)

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 21

[node name="Buildings" parent="HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_j3ogv")]
layout_mode = 2
category_name = "Buildings"
category_mode = "building"
color = Color(0.298039, 0.145098, 0, 1)
child_color = Color(0.447059, 0.337255, 0.25098, 1)
hide_buttons_if_no_connection = true
seperation_num = 30

[node name="Tiles" parent="HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_j3ogv")]
layout_mode = 2
category_name = "Tiles"
category_mode = "tile"
color = Color(0.00392157, 0.113725, 0.560784, 1)
child_color = Color(0.207843, 0.333333, 0.631373, 1)
hide_buttons_if_no_connection = true
seperation_num = 30

[node name="Decorations" parent="HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_j3ogv")]
layout_mode = 2
category_name = "Decorations"
category_mode = "decoration"
color = Color(0.337255, 0, 0.364706, 1)
child_color = Color(0.552941, 0, 0.631373, 1)
hide_buttons_if_no_connection = true
seperation_num = 30

[node name="Jobs" parent="HBoxContainer/VBoxContainer/ScrollContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_j3ogv")]
layout_mode = 2
category_name = "Jobs"
category_mode = "job"
color = Color(0.0705882, 0.188235, 0, 1)
disable_if_no_connection = true
seperation_num = 30

[node name="sfx" type="Node" parent="."]

[node name="build_tile" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("4_6c5rr")

[node name="build_building" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource("5_2s65y")
volume_db = -0.5

[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
